bk_ida/gccida/c2/gen_rtvec_v
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1166:18: error: expected expression
v14 = *( _OWORD *)&v2[v12 * 2 + 2]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1166:10: error: use of undeclared identifier '_OWORD'
v14 = *( _OWORD *)&v2[v12 * 2 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1168:12: error: expected expression
*( _OWORD *)result[v12 + 1].elem = v14; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1168:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v12 + 1].elem = v14; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1169:18: error: expected expression
v15 = *( _OWORD *)&v2[v12 * 2 + 6]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1169:10: error: use of undeclared identifier '_OWORD'
v15 = *( _OWORD *)&v2[v12 * 2 + 6]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1171:12: error: expected expression
*( _OWORD *)result[v12 + 3].elem = v15; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1171:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v12 + 3].elem = v15; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1172:18: error: expected expression
v16 = *( _OWORD *)&v2[v12 * 2 + 10]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1172:10: error: use of undeclared identifier '_OWORD'
v16 = *( _OWORD *)&v2[v12 * 2 + 10]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1174:12: error: expected expression
*( _OWORD *)result[v12 + 5].elem = v16; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1174:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v12 + 5].elem = v16; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1175:18: error: expected expression
v17 = *( _OWORD *)&v2[v12 * 2 + 14]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1175:10: error: use of undeclared identifier '_OWORD'
v17 = *( _OWORD *)&v2[v12 * 2 + 14]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1177:12: error: expected expression
*( _OWORD *)result[v12 + 7].elem = v17; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1177:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v12 + 7].elem = v17; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1193:18: error: expected expression
v20 = *( _OWORD *)&v2[v18 / 8 + 2]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1193:10: error: use of undeclared identifier '_OWORD'
v20 = *( _OWORD *)&v2[v18 / 8 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/emit-rtl.c:1195:12: error: expected expression
*( _OWORD *)&result[1].elem[v18 / 8] = v20; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec_v/src/obj/emit-rtl.o] Error 1
